--- a/lounge.html
+++ b/lounge.html
@@ -101,7 +101,7 @@
       Enjoy.
     </p>
     <ul>
-      <li>Buddha Bar, Claude Challe</li>
+      <li>Buddy Bar, Claude Challe</li>
       <li>When It Falls, Zero 7</li>
       <li>Earth 7, L.T.J. Bukem</li>
       <li>Le Roi Est Mort, Vive Le Roi!, Enigma</li>
@@ -109,9 +109,10 @@
     </ul>
 
     <p>
-      &copy; 2012, Head First Lounge<br>
+      &copy; 2022, Head First Lounge<br>
       All trademarks and registered trademarks appearing on this site are 
       the property of their respective owners.
     </p>
   </body>
 </html>
+<!--This has been updated for CPTR245-->
