--- a/lounge.html
+++ b/lounge.html
@@ -54,7 +54,7 @@
       come and join us anytime.
     </p>
 
-    <h2>Weekly Elixir Specials</h2>
+    <h2>*Weekly Elixir Specials*</h2>
     <p>
       <img src="images/yellow.gif" alt="Lemon Breeze Elixir">
     </p>
